# LeapWorkSpace

./: .gitignore  README.md  run-work-leapvm.js
.claude/: settings.json
benchmarks/: dom-final-shape-baseline-20260305_152203.json  dom-final-shape-baseline-20260305_152349.json  dom-final-shape-baseline-20260305_152438.json  experiment-c1-reduce-observe.js  experiment-c2-reduce-bridge.js  experiment-c3-reduce-init.js  experiment-c4-stabilize-script-source.js  experiment-common.js  h5st-detailed-20260303_234155.json  h5st-detailed-20260305_175147.json  h5st-detailed-20260305_175222.json  h5st-detailed-20260308_005502.json  h5st-detailed-20260308_005913.json  h5st-detailed-20260308_010658.json  investigate-sync-stall.js  longevity-runner.js  optimization-roadmap.md  perf-baseline-runner.js
benchmarks/report/: H5ST_BASELINE_CPU_REPORT_20260306.md  H5ST_HOTSPOT_HOOK_IMPACT_REPORT_20260306.md  H5ST_LONGEVITY_REPRO_REPORT_20260306.md  H5ST_PERFORMANCE_REPORT_20260303.md  H5ST_SINGLE_TASK_BREAKDOWN_REPORT_20260306.md  P0_VALIDATION_REPORT_20260306.md  experiment-c1-reduce-observe-20260306_200158.md  experiment-c2-reduce-bridge-20260306_200318.md  experiment-c3-reduce-init-20260306_200428.md  experiment-c4-stabilize-script-source-20260306_221220.md  experiment-c4-stabilize-script-source-20260306_231555.md  experiment-c4-stabilize-script-source-20260306_231707.md  fix-plan.md  lifecycle-audit.md
benchmarks/results/: baseline-20260306_172108.json  baseline-20260306_172116.json  baseline-baseline-20260306_200145.json  baseline-baseline-20260306_200158.json  baseline-baseline-20260306_200211.json  baseline-baseline-20260306_200222.json  baseline-baseline-20260306_200232.json  baseline-baseline-20260306_200244.json  baseline-baseline-20260306_200254.json  baseline-baseline-20260306_200318.json  baseline-baseline-20260306_200328.json  baseline-baseline-20260306_200339.json  baseline-baseline-20260306_200349.json  baseline-baseline-20260306_200402.json  baseline-baseline-20260306_200412.json  baseline-baseline-20260306_201355.json  baseline-baseline-20260306_201409.json  baseline-baseline-20260306_203452.json  baseline-full-20260306_184046.json  baseline-minimal-20260306_184033.json  cpuprofile-stall-20260307_232007-run11-workerthread-worker-1.cpuprofile  cpuprofile-stall-20260307_232007-run11-workerthread-worker-11.cpuprofile  cpuprofile-stall-20260307_232007-run11-workerthread-worker-3.cpuprofile  cpuprofile-stall-20260307_232007-run11-workerthread-worker-4.cpuprofile  cpuprofile-stall-20260307_232007-run11-workerthread-worker-5.cpuprofile  cpuprofile-stall-20260307_232007-run11-workerthread-worker-6.cpuprofile  cpuprofile-stall-20260307_232007-run11-workerthread-worker-7.cpuprofile  dom-final-shape-baseline-20260305_143344.json  dom-final-shape-baseline-20260305_144741.json  dom-multi-scale-20260305_152448.json  experiment-c1-reduce-observe-20260306_200158.json  experiment-c2-reduce-bridge-20260306_200318.json  experiment-c3-reduce-init-20260306_200428.json  experiment-c4-stabilize-script-source-20260306_221220.json  experiment-c4-stabilize-script-source-20260306_231555.json  experiment-c4-stabilize-script-source-20260306_231707.json  h5st-soak-supplement-20260303.json  longevity-mtp10-20260306_185515.json  longevity-mtp100-20260306_185625.json  longevity-mtp100-20260306_201602.json  (+171 more)
leap-env/: README.md  global-surface-report.json  index_debug.js  package-lock.json  package.json  runner.js
leap-env/scripts/: test-global-surface.js
leap-env/skeleton_puller_extension/: content.js  manifest.json
leap-vm/: CMakeLists.txt  README.md  index.js  package-lock.json  package.json
leap-vm/src/addon/: main.cc  vm_instance_wrapper.cc  vm_instance_wrapper.h
leap-vm/src/leapvm/: builtin_wrapper.cc  builtin_wrapper.h  dom_core.cc  dom_core.h  hook_filter.cc  hook_filter.h  leap_background_scheduler.cc  leap_background_scheduler.h  leap_delayed_task_scheduler.cc  leap_delayed_task_scheduler.h  leap_foreground_task_runner.cc  leap_foreground_task_runner.h  leap_inspector_client.cc  leap_inspector_client.h  leap_platform.cc  leap_platform.h  leap_platform_metrics.cc  leap_platform_metrics.h  log.cc  log.h  monitor.cc  monitor.h  native_wrapper.cc  native_wrapper.h  v8_headers.h  v8_platform.cc  v8_platform.h  vm_instance.cc  vm_instance.h  ws_inspector_server.cc  ws_inspector_server.h
leap-vm/src/leapvm/skeleton/: dispatch_bridge.cc  dispatch_bridge.h  hook_log_policy.cc  hook_log_policy.h  skeleton_builder.cc  skeleton_builder.h  skeleton_parser.cc  skeleton_parser.h  skeleton_registry.cc  skeleton_registry.h  skeleton_types.h
leap-vm/src/service/: config_loader.cc  config_loader.h  ipc_server.cc  ipc_server.h  main.cc  task_protocol.cc  task_protocol.h  worker_pool.cc  worker_pool.h
leap_manual/: README.md
leap_manual/architecture/: 00-全局架构概览.md  Context复用与DOM接入大纲.md  DOM-BOM实现层.md  DoD布局引擎.md  Hook日志策略层.md  Hook监控与拦截体系.md  Inspector调试服务.md  Intl_ICU与node_napi_only方案.md  LeapVM核心与Addon桥接.md  Skeleton拉取工具.md  Skeleton系统与Dispatch.md  Window与全局对象模型.md  iframe多上下文.md  并发池.md  构建与打包系统.md  特殊API模块.md  签名容器与配置注入.md  运行时核心与配置.md  错误堆栈伪装.md
leap_manual/maintenance/: 2024-XX-XX_Skeleton继承字段prototype_chain退场与super_super_type统一.md  2025-12-02_LeapVM_定时器与Hook监控基础能力落地.md  2025-12-04_LeapEnv_v2架构迁移与构建系统整理.md  2025-12-04_LeapVM_Inspector_CorkBuffer线程修复.md  2025-12-04_LeapVM_Inspector集成与调试稳定性改造.md  2025-12-04_LeapVM_双V8共存与构建链路.md  2025-12-10_Window_addEventListener与toStringTag编码修复摘要.md  2025-12-11_RunScript编译错误诊断与退出fatal规避摘要.md  2026-02-16_WindowProperties原型constructor修复与SKELETON_OPTIONS文档整理.md  2026-02-17_进程池压测命令与并发验证结论整理.md  2026-02-18_DOM路线图M3收口_布局兼容trace摘要.md  2026-02-18_线程池改造收口与验证闭环.md  2026-02-19_DOM废弃路线说明.md  2026-02-20_DoD迁移Phase2C收口与验收摘要.md  2026-02-21_BOM单例C++化与applyInstanceSkeleton_super_type自动匹配.md  2026-02-21_iframe多上下文实现.md  2026-02-22_Intl_ICU修复.md  2026-02-22_SPECIAL_PROPS与Event_isTrusted兼容.md  2026-02-22_运行时缺陷修复.md  2026-02-23_SOLUTION时间线快照_收口前.md  (+12 more)
manual/: README.md
site-profiles/: README.md  jd.json
tests/: README.md
work/: h5st.js  h5st.trace.js  synthetic-window-stress.js
(+350 files in other folders)
